Version 1.1.3 (GitHub, 2018-02-07)
	o Improvement: PDEviolinPlot layout changes and plotting paramater added
	o InspectCorrelation now visualizes the density and calcluates the spearman correlation index as a shortcut to PDEscatter
	
Version 1.1.2 (GitHub, 2018-02-07)
	o bugfix: InspectDistances methods argument now passed on to parallelDist::parDist

Version 1.1.1 (CRAN 2018-06-30)
	o Improved visualization of PDE optimized violin plot
	
Version 1.1.0 (GitHub)
    o Vignette generated
	o Bugfix: authors stated in Description regarding functions which were used in other dbt packages instead of this package.
	
Version 1.0.9 (GitHub)
    o ClassViolinPlot build on top of stat_pde_density for Data with Clustering
    o bugfix in stat_pde_density for special case of one value
	o parallelDist integrated for faster distance computations
	
Version 1.0.8 (GitHub)
    o PDEviolinplotData build on top of stat_pde_density
    o bugfix in stat_pde_density for special case of one value
	o Minor bugfix in PDEscatter
	
Version 1.0.7 (GitHub)
    o PDE optimized violin plot: stat_pde_density added in order to integrate concept with ggplot2

Version 1.0.1-1.0.6 (GitHub)
    o ClassBoxPlot function added for Data with Clustering
	o ClassPDEplot function added for Data with Clustering
	o ClassPDEplotMaxLikeli function added for Data with Clustering
	o minor bugfix in InspectVariable function
	o bugfix in internpiechart

Version 1.0.0 (CRAN, 2018-05-06)
    o Complete package generated
