@@ -8,7 +8,7 @@ Maintainer: Michael Thrun <m.thrun@gmx.net>
 Description: A collection of various visualizations methods is provided. With regards to classified high-dimensional data several visualizations are presented, e.g. the heat map and silhouette plot. In the case of exploratory data analysis, 'DataVisualizations' makes it possible to inspect the distribution of each feature of a dataset visually through the combination of four methods. One of these methods is the Pareto density estimation (PDE) of the probability density function (pdf). The visualizations of the distribution of distances using PDE, the scatter-density plot using PDE for two variables, the Shepard density plot as well as the Bland-Altman plot are presented here. For a classification of countries, a map of the world or Germany can be visualized.  More detailed explanations can be found in the book of Thrun, M.C.:"Projection-Based Clustering through Self-Organization and Swarm Intelligence" (2018) <DOI:10.1007/978-3-658-20540-9>. Furthermore, for categorical features the ABC analysis improved Pie charts, slope charts and fan plots are usable. Additionally, for measurements across a geographic area an easy to use function for a Choropleth map is presented here. At last, the PDE-optimized violin plot for either classified or non-classified, univariate or multivariate data is available here. The the PDE-optimized violin plot is an alternative for the box-and-whisker plot (boxplot).
 License: GPL-3
 Imports: Rcpp (>= 0.12.12), AdaptGauss, ggplot2, magrittr, sp
-Suggests: plotly, plyr, akima, ggmap, reshape2, plotrix, rworldmap, rgl, ABCanalysis, choroplethr, gplots, dplyr, R6, parallelDist, knitr (>= 1.12), rmarkdown (>= 0.9), rglwidget, vioplot
+Suggests: plotly, plyr, akima, ggmap, reshape2, plotrix, rworldmap, rgl, ABCanalysis, choroplethr, gplots, dplyr, R6, parallelDist, knitr (>= 1.12), rmarkdown (>= 0.9), rglwidget, vioplot, ggExtra
 LinkingTo: Rcpp, RcppArmadillo
 Depends: R (>= 2.10)
 SystemRequirements: C++11
